--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ com_crashlytics_export_strings.xml
 /build/
 /android/build/
 /core/build/
+!/desktop/build/resources/main/*
 /desktop/build/
 /html/build/
 /ios/build/
